kubernetes/deploy/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
      release: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        release: qbittorrent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: hardware
                operator: In
                values:
                - credigree  
      podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - jellyfin
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: linuxserver/qbittorrent:latest
        imagePullPolicy: Always
        name: qbittorrent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: downloads
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent
      - name: downloads
        nfs:
          server: 192.168.100.40
          path: /volume1/Media
