kubernetes/deploy/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: qbittorrent
spec:
  rules:
  - host: torrent.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
